# cpp_katas

./: .gitignore  README.md
are_they_the_same/: Are_They_The_Same.cpp  Are_They_The_Same_Tests.cpp  CMakeLists.txt  README.md
bache_fizzbuzz/: CMakeLists.txt  Fizzbuzz_Converter.cpp  Fizzbuzz_Tests.cpp
friend_or_foe/: CMakeLists.txt  FriendFoe.cpp  FriendFoe_Tests.cpp  README.md
help_the_bookseller/: CMakeLists.txt  README.md  StockList.cpp  StockList_Tests.cpp
highest_and_lowest/: CMakeLists.txt  HighestLowest.cpp  HighestLowest_Tests.cpp  README.md
matrix_creation/: CMakeLists.txt  Matrix_Creation.cpp  Matrix_Creation_Tests.cpp  README.md
roman_numerals_encoder/: CMakeLists.txt  README.md  Roman_Numerals_Encoder.cpp  Roman_Numerals_Encoder_Tests.cpp
stop_spinning_my_words/: CMakeLists.txt  README.md  Stop_Spinning_My_Words.cpp  Stop_Spinning_My_Words_Tests.cpp
sum_between_numbers/: CMakeLists.txt  README.md  Sum_Between_Numbers.cpp  Sum_Between_Numbers_Tests.cpp
who_likes_it/: CMakeLists.txt  README.md  Who_Likes_It.cpp  Who_Likes_It_Tests.cpp
